# world-models-pytorch

./: .gitignore  README.md  dataset.py  generate_data.py  losses.py  params.yaml  pyproject.toml  testVAE.ipynb  train.py  trainRNN.py  trainVAE.py  utils.py
VAE/: dataset.py  generate_data.py  model.py  test.ipynb  train.py
models/: controller.py  rnn.py  vae.py
notebooks/: debug.ipynb  testVAE.ipynb  test_new_env.ipynb
