[tool.poetry]
name = "world-models-pytorch"
version = "0.1.0"
description = ""
authors = ["johanngerberding <johann.gerberding@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.4.0"
gymnasium = {extras = ["box2d"], version = "^0.29.1"}
numpy = "^2.0.1"
jupyter = "^1.0.0"
tqdm = "^4.66.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
